Fix low contrast of page title link in dark mode

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -42,4 +42,8 @@ button {
         background-color: #120325;
         color: #fff;
     }
+
+    a {
+        color: #fff;
+    }
 }
